--- a/graphql-async.opam
+++ b/graphql-async.opam
@@ -14,7 +14,7 @@ build: [
 depends: [
   "ocaml" {>= "4.03.0"}
   "dune" {build}
-  "graphql"
+  "graphql" {= version}
   "async_kernel" {>= "v0.9.0"}
   "alcotest" {with-test}
   "async_unix" {with-test & >= "v0.9.0"}
