--- a/graphql_parser.opam
+++ b/graphql_parser.opam
@@ -1,19 +1,21 @@
-opam-version: "1.2"
+opam-version: "2.0"
 maintainer: "Andreas Garnaes <andreas.garnaes@gmail.com>"
 authors: "Andreas Garnaes <andreas.garnaes@gmail.com>"
 homepage: "https://github.com/andreas/ocaml-graphql-server"
 doc: "https://andreas.github.io/ocaml-graphql-server/"
 bug-reports: "https://github.com/andreas/ocaml-graphql-server/issues"
-dev-repo: "https://github.com/andreas/ocaml-graphql-server.git"
-build: [["dune" "build" "-p" name "-j" jobs]]
-build-test: [["dune" "runtest" "-p" name "-j" jobs]]
+dev-repo: "git+https://github.com/andreas/ocaml-graphql-server.git"
+build: [
+  ["dune" "build" "-p" name "-j" jobs]
+  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
+]
 depends: [
+  "ocaml" {>= "4.03.0"}
   "dune" {build}
   "angstrom" {>= "0.7.0"}
   "sexplib"
   "ppx_sexp_conv" {>= "0.9.0"}
-  "alcotest" {test}
+  "alcotest" {with-test}
 ]
-available: [
-  ocaml-version >= "4.03.0"
-]
+
+synopsis: "Library for parsing GraphQL queries"
