--- a/graphql-lwt.opam
+++ b/graphql-lwt.opam
@@ -1,20 +1,27 @@
-opam-version: "1.2"
+opam-version: "2.0"
 maintainer: "Andreas Garnaes <andreas.garnaes@gmail.com>"
 authors: "Andreas Garnaes <andreas.garnaes@gmail.com>"
 homepage: "https://github.com/andreas/ocaml-graphql-server"
 doc: "https://andreas.github.io/ocaml-graphql-server/"
 bug-reports: "https://github.com/andreas/ocaml-graphql-server/issues"
-dev-repo: "https://github.com/andreas/ocaml-graphql-server.git"
-build: [["dune" "build" "-p" name "-j" jobs]]
-build-test: [["dune" "runtest" "-p" name "-j" jobs]]
+dev-repo: "git+https://github.com/andreas/ocaml-graphql-server.git"
+
+build: [
+  ["dune" "build" "-p" name "-j" jobs]
+  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
+]
+
 depends: [
+  "ocaml" {>= "4.03.0"}
   "dune" {build}
   "graphql"
-  "alcotest" {test}
+  "alcotest" {with-test}
   "lwt"
   "cohttp-lwt-unix" {>= "1.0.0"}
   "crunch"
 ]
-available: [
-  ocaml-version >= "4.03.0"
-]
+
+synopsis: "Build GraphQL schemas with Lwt support"
+
+description: """
+`graphql-lwt` adds support for Lwt to `graphql`, so you can use Lwt in your GraphQL schema resolver functions."""
